css/index.css
:root {
  --fill-color: lightseagreen;
  --secondary-color: #3d8bb1;
  --stroke-color: #1d2a53;
  --white: white;
  --black: black;
  --red: #e74c3c;
}

#welcome-container {
  background-image: url("../images/Sterren1.png");
  position: absolute;
  z-index: 100;
  background-size: 200vh;
  width: 100vw;
  height: 100vh;
  opacity: 1;
  transition: all 2s linear;
}

#welcome-container.hide {
  opacity: 0;
  z-index: -1;
  transition: all 2s linear;
}

#welcome-container .title {
  color: var(--white);
  text-align: center;
  margin-top: 20vh;
  font-size: 18px;
  line-height: 1.5;
}

.title span {
  font-size: 18px;
  display: inline-block;
  animation: move 5s ease-in-out infinite;
}

@media screen and (min-width: 576px) {
  .title span {
    font-size: 32px;
  }
}
@media screen and (min-width: 992px) {
  .title span {
    font-size: 48px;
  }
}

@keyframes move {
  0% {
    transform: translate(0%, 0);
  }
  10% {
    transform: translate(-10%, 0);
  }
  50% {
    text-shadow: 0 25px 50px rgba(200, 200, 200, 0.75);
  }
  80% {
    transform: translate(10%, 0);
  }
  90% {
    transform: translate(-10%, 0);
  }
  100% {
    transform: translate(0%, 0);
  }
}

.title span:nth-child(2) {
  animation-delay: 0.5s;
}

.title span:nth-child(3) {
  animation-delay: 1s;
}

.title span:nth-child(4) {
  animation-delay: 1.5s;
}

.title span:nth-child(5) {
  animation-delay: 2s;
}

.title span:nth-child(6) {
  animation-delay: 2.5s;
}

.title span:nth-child(7) {
  animation-delay: 3s;
}

.title span:nth-child(8) {
  animation-delay: 3.5s;
}

.title span:nth-child(9) {
  animation-delay: 4s;
}

.title span:nth-child(10) {
  animation-delay: 4.5s;
}

.title span:nth-child(11) {
  animation-delay: 5s;
}


#welcome-container .loading-container {
  width: 100%;
  height: calc(100vh - 300px);
}

#welcome-container .loading-container p {
  color: var(--white);
  margin-left: calc(50vw - 60px);
}

#welcome-container.loaded .loading-container {
  display: none;
}

#welcome-container .start-game {
  transition: opacity 3s ease-out;
  transition-delay: 0.5s;
  opacity: 0;
  height: 0;
  overflow: hidden;
}

#welcome-container.loaded .start-game {
  opacity: 1;
  height: auto;
}

#welcome-container.loaded .start {
  text-align: -webkit-center;
  width: 100%;
}

#welcome-container.loaded .start-btn {
  width: fit-content;
  border: 3px solid white;
  border-radius: 4px;
  padding: 20px;
  margin: 100px;
  color: var(--white);
  transition: all 0.85s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

#welcome-container.hide .start-btn,
#welcome-container.loaded .start-btn:hover {
  cursor: pointer;
  transition: all 0.85s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  transform: scaleX(1.5);
}

.spinner-container {
  display: block;
  height: 200px;
  position: relative;
  letter-spacing: 0.5px;
}

.spinner::after {
  content: '';
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  position: absolute;
  top: calc(50% - 20px);
  left: calc(50% - 20px);
  border-radius: 50%;
}

.spinner.grow-pulse::after {
  background-color: rgba(255, 255, 255, 1.0);
  animation: grow-pulse 1.5s ease-out infinite;
}

@keyframes grow-pulse {
  0% {
    transform: scale(0.1);
    opacity: 0;
  }
  30% {
    opacity: 0.5;
  }
  60% {
    transform: scale(1.2);
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}

@keyframes bounce {
	0%, 100%, 20%, 50%, 80% {
		-webkit-transform: translateY(0);
		-ms-transform:     translateY(0);
		transform:         translateY(0)
	}
	40% {
		-webkit-transform: translateY(-20px);
		-ms-transform:     translateY(-20px);
		transform:         translateY(-20px)
	}
	60% {
		-webkit-transform: translateY(-15px);
		-ms-transform:     translateY(-15px);
		transform:         translateY(-15px)
	}
}

body {
  margin: 0;
}

#game-container {
  position: relative;
}

canvas {
  display: block;
  height: 100vh;
  width: 100vw;
}

#game-container canvas, #user-interface {
  position: absolute;
}

#user-interface {
  z-index: 1;
  background-color: transparent;
  display: block;
  height: calc(100vh - 32px);
  width: calc(100vw - 32px);

  padding: 16px;
}

.top-container, .bottom-container {
  display: flex;
  justify-content: space-between;
}

.kitten-container {
  width: fit-content;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: stretch;
}

.kitten-container .kitten-count {
  font-size: 24px;
  padding-left: 10px;
  padding-right: 10px;
  color: var(--white);
}

.kitten-container .kitten-icon {
  position: relative;
  display: flex;
  width: 50px;
}

.kitten-container .kitten-icon img:hover {
  animation: shake 0.5s;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}

.help-container {
  position: absolute;
  bottom: 16px;
}
/* ... */

